--- a/02-Architectures/biblio.bib
+++ b/02-Architectures/biblio.bib
@@ -592,6 +592,24 @@ Musio}
 }
 
 
+@phdthesis{lefort_apprentissage_2012,
+	title = {Apprentissage spatial de corrélations multimodales par des mécanismes d'inspiration corticale},
+	author = {Lefort, Mathieu},
+	school = {Université de Lorraine},
+	date = {2012},
+
+}
+
+
+
+@inproceedings{lefort_unlearning_2011,
+	address = {Berlin, Heidelberg},
+	title = {Unlearning in the {BCM} {Learning} {Rule} for {Plastic} {Self}-organization in a {Multi}-modal {Architecture}},
+	booktitle = {Artificial {Neural} {Networks} and {Machine} {Learning}, {ICANN} 2011},
+	author = {Lefort, Mathieu and Boniface, Yann and Girau, Bernard},
+	year = {2011}
+}
+
 @inproceedings{johnsson_associative_2009,
 	title = {Associative Self-Organizing Map},
 	author = {M. Johnsson and C. Balkenius and G. Hesslow},
