--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -373,6 +373,24 @@
   year       = 2015,
 }
 
+@phdthesis{lefort_apprentissage_2012,
+	title = {Apprentissage spatial de corrélations multimodales par des mécanismes d'inspiration corticale},
+	author = {Lefort, Mathieu},
+	school = {Université de Lorraine},
+	date = {2012},
+}
+
+@inproceedings{lefort_unlearning_2011,
+	address = {Berlin, Heidelberg},
+	title = {Unlearning in the {BCM} {Learning} {Rule} for {Plastic} {Self}-organization in a {Multi}-modal {Architecture}},
+	booktitle = {Artificial {Neural} {Networks} and {Machine} {Learning}, {ICANN} 2011},
+	author = {Lefort, Mathieu and Boniface, Yann and Girau, Bernard},
+	year = {2011}
+}
+
+
+
+
 @article{Liu2015DeepSM,
   author     = {Liu, N. and Wang, Jinjun and Gong, Yihong},
   title      = {Deep Self-Organizing Map for visual classification},
@@ -790,6 +808,13 @@
   keywords   = {Vector quantization, Image coding, Training data, Image reconstruction, Computational complexity, Costs, Distortion, Image storage, Signal design, Storage automation},
 }
 
+@inproceedings{Costa2016ANS,
+  title={A New Structured Self-Organizing Map with Dynamic Growth Applied to Image Compression},
+  author={Jos{\'e} Alfredo Ferreira Costa and Adri{\~a}o Duarte D{\'o}ria Neto and M{\'a}rcio Luiz De Andrade Netto},
+  year={2016},
+  booktitle = {Proceedings of the VI Brazilian Conference on Neural Networks}
+}
+
 @article{varsta_temporal_2001,
   author     = {Varsta, Markus and Heikkonen, Jukka and Lampinen, Jouko},
   title      = {Temporal {Kohonen} {Map} and the {Recurrent} {{Self}-{Organizing}} {Map}: {Analytical} and {Experimental} {Comparison}},
@@ -945,15 +970,13 @@
 
 @incollection{KOHONEN19911357,
   author     = {Kohonen, Teuvo},
-  title      = {{THE} {HYPERMAP} {ARCHITECTURE}},
+  title      = {The Hypermap Architecture},
   booktitle  = {Artificial Neural Networks},
   publisher  = {North-Holland},
   year       = 1991,
   editor     = {Teuvo KOHONEN and Kai MÄKISARA and Olli SIMULA and Jari KANGAS},
   pages      = {1357--1360},
-  address    = {Amsterdam},
-  doi        = {https://doi.org/10.1016/B978-0-444-89178-5.50088-9},
-  isbn       = {978-0-444-89178-5},
+  address    = {Amsterdam}
 }
 
 @inproceedings{Kohonen1991THEHA,
@@ -1214,4 +1237,23 @@
   journal={Journal of Comparative Neurology},
   year={1980},
   volume={192}
+}
+
+
+@incollection{johnsson_spatial_2012,
+	title = {Spatial {Clustering} {Using} {Hierarchical} {SOM}},
+	language = {en},
+	urldate = {2022-10-04},
+	booktitle = {Applications of {Self}-{Organizing} {Maps}},
+	publisher = {InTech},
+	author = {Henriques, Roberto and Lobo, Victor and Bacao, Fernando},
+	editor = {Johnsson, Magnus},
+	month = nov,
+	year = {2012}}
+
+@inproceedings{Paplinski2005MultimodalFS,
+  title={Multimodal FeedForward Self-organizing Maps},
+  author={Andrew P. Paplinski and Lennart Gustafsson},
+  booktitle={CIS},
+  year={2005}
 }
