--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{arydshln}
+\usepackage{booktabs}
 
 %Fancy headers
 \usepackage{fancyhdr}
@@ -49,8 +51,8 @@
 \dominitoc
 \include{titlepage}
 \tableofcontents
-%\subfile{00-Introduction/source}
-\subfile{01-Modularite/source}
+\subfile{00-Introduction/source}
+%\subfile{01-Modularite/source}
 \mainmatter
 
 \subfile{02-Architectures/source}
